# rnnoise

./: CMakeLists.txt
cmake/: rnnoise.pc.in  rnnoiseConfig.cmake.in
examples/: CMakeLists.txt  dr_wav.h  helper.h  rnnoise_demo.c  wav.h
src/: celt_lpc.c  denoise.c  pitch.c
